2009-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/WebHeaderCollectionTest.cs: Add test cases to show
	headers are not case-sensitive. Add test cases to show that every
	headers are valid when the collection is not associated with a 
	WebRequest.
	* System.Net/WebRequestTest.cs: Add test cases to show validations
	required when headers are used with a WebRequest. Add test case to
	show that the WebHeaderCollection is not set (like a field) but
	instead copied when assigned.

2009-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/WebRequestTest.cs: Add test cases for Method property

2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media/VisualTreeHelperTest.cs:
	* System.Windows.Controls/ContentControlTest.cs:
	* System.Windows.Controls/ContentPresenterTest.cs: Revert the
	  changes in r133738 until I can figure out why the x86 bot
	  doesn't like them. It's causing the extended controls tests
	  to time out.

2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media.Animation/StoryboardTest.cs: Add tests
	  to see what happens if we apply a DoubleAnimation to DP with
	  type IComparable.

2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentPresenterTest.cs: Add tests
	  which explicitly check that changing
	  ContentPresenter.Content/ContentTemplate unsets the visual
	  child.

2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: That debug
	  spew wasn't supposed to hit SVN

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media/VisualTreeHelperTest.cs:
	* System.Windows.Controls/ContentControlTest.cs: If the
	  content property changes, the Template is cleared if it has
	  already been applied.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Check more
	  things in the test.

2009-05-07  Alan McGovern  <amcgovern@novell.com>
